Add general blueprint to app and search icon

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,38 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <nav>
+        <div>
+            <input type="text" placeholder="City">
+            <div src="./search.svg" alt="" class="search-icon" width="50px"></div>
+            <button>C°/F°</button>
+        </div>
+        
+    </nav>
+    <div class="content-container">
+        <div class="current-content-card">
+            <div class="current-content content-cards-container">
+                <div>
+                    <div>Location</div>
+                    <div>Date/time</div>
+                    <div>Temp</div>
+                </div>
+                <div class="current-icon-desc">
+                    <div>Icon</div>
+                    <div>Description</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="daily-forecast-container">
+            <div class="content-title">Daily Forecast</div>
+            <div class="content-cards-container">Content</div>
+        </div>
+
+        <div class="hourly-forecast-container">
+            <div class="content-title">Hourly Forecast</div>
+            <div class="content-cards-container">Content</div>
+        </div>
+    </div>
 </body>
 </html>
