--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -17,24 +20,24 @@
     <div class="content-container">
         <div class="current-content-card">
             <div class="current-content content-cards-container">
-                <div>
-                    <div>Location</div>
-                    <div>Date/time</div>
-                    <div>Temp</div>
+                <div class="current-details">
+                    <div class="location">City Name</div>
+                    <div>May 2020</div>
+                    <div class="current-temp">70°F</div>
                 </div>
                 <div class="current-icon-desc">
                     <div>Icon</div>
-                    <div>Description</div>
+                    <div class="current-desc">Sunny</div>
                 </div>
             </div>
         </div>
 
         <div class="daily-forecast-container">
             <div class="content-title">Daily Forecast</div>
-            <div class="content-cards-container">Content</div>
+            <div class="content-cards-container daily-content">Day1 --  Day 2  -- Day 3</div>
         </div>
 
-        <div class="hourly-forecast-container">
+        <div class="hourly-forecast-container last-container">
             <div class="content-title">Hourly Forecast</div>
             <div class="content-cards-container">Content</div>
         </div>
