Add API fetch to main card to display entered val
User can now enter a value into the search bar. main card will populate current weather of city and icon by either clicking on search icon or pressing enter.
Button to change degree unit works on main card as well.

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
 <body>
     <nav>
         <div>
-            <input type="text" placeholder="City">
+            <input type="text" placeholder="City" id="city" name="city">
             <div src="./search.svg" alt="" class="search-icon" width="50px"></div>
-            <button>C°/F°</button>
+            <button class="change-units">C°/F°</button>
         </div>
         
     </nav>
@@ -22,11 +22,11 @@
             <div class="current-content content-cards-container">
                 <div class="current-details">
                     <div class="location">City Name</div>
-                    <div>May 2020</div>
+                    <div class="date">May 2020</div>
                     <div class="current-temp">70°F</div>
                 </div>
                 <div class="current-icon-desc">
-                    <div>Icon</div>
+                    <img class="current-icon">
                     <div class="current-desc">Sunny</div>
                 </div>
             </div>
