Add daily weather cards to page and degree change
Page will now display cards with formatted day of week. button to change degrees to F/Celcius is functional.
Page now has default city on page load.

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
                 <div class="current-details">
                     <div class="location">City Name</div>
                     <div class="date">May 2020</div>
+                    <div class="time"></div>
                     <div class="current-temp">70°F</div>
                 </div>
                 <div class="current-icon-desc">
@@ -34,7 +35,7 @@
 
         <div class="daily-forecast-container">
             <div class="content-title">Daily Forecast</div>
-            <div class="content-cards-container daily-content">Day1 --  Day 2  -- Day 3</div>
+            <div class="content-cards-container daily-content"></div>
         </div>
 
         <div class="hourly-forecast-container last-container">
