Fix weekday on daily forecast. Wrong day displayed
The daily forecast now displays correct day. Before the fix, weekday showed as previous weekday instead.

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
         <div class="hourly-forecast-container last-container">
             <div class="content-title">Hourly Forecast</div>
-            <div class="content-cards-container">Content</div>
+            <div class="content-cards-container"></div>
         </div>
     </div>
 </body>
