Add content and icons to hourly forecast

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
         <div class="hourly-forecast-container last-container">
             <div class="content-title">Hourly Forecast</div>
-            <div class="content-cards-container"></div>
+            <div class="content-cards-container hourly-content"></div>
         </div>
     </div>
 </body>
